# VFW

./: .clangd  .gitignore  CMakeLists.txt  README.md  VFW.desktop
.github/workflow/: release.yml
.github/workflows/: release.yml
assets/: VFW.desktop  app_icon.rc
assets/configs/: .positionsave.csv  settings
assets/styles/Dark/: playlistmanager.css  srepeat.css
assets/styles/Dark-Breeze/: mediaurl.css  subconfig.css
assets/styles/Light/: playlistmanager.css
assets/styles/Pitch-Black/: mainwindow.css  playlistmanager.css  subconfig.css
assets/themes/Dark/: ChangeThemeWindow.css  mainwindow.css  mediaurl.css  playlistmanager.css  shortcutsinstructions.css
assets/themes/Dark-Breeze/: jumpwindow.css  mainwindow.css  playlistmanager.css  shortcutsinstructions.css  srepeat.css
assets/themes/Light/: ChangeThemeWindow.css  mainwindow.css  mediaurl.css  playlistmanager.css  shortcutsinstructions.css  subconfig.css
assets/themes/Pitch-Black/: mainwindow.css  mediaurl.css  playlistmanager.css  shortcutsinstructions.css
binwithoutchrono/: VFW  moc_SRepeatWindow.cpp  moc_mainwindow.cpp  moc_mediaurl.cpp  moc_playlistmanager.cpp  moc_shortcutsinstructions.cpp  moc_subconfig.cpp
cache/: VFW.desktop  run.sh
cache/configs/: .positionsave.csv  Shortcuts_Instructions  subconfig.json  theme
cache/styles/: playlistmanager.css  srepeat.css  style.css  subconfig.json
cache/styles/Dark/: jumpwindow.css  mainwindow.css  mediaurl.css  playlistmanager.css  srepeat.css  subconfig.css
cache/styles/Dark-Breeze/: jumpwindow.css  mainwindow.css  playlistmanager.css  srepeat.css  subconfig.css
cache/styles/Light/: ChangeThemeWindow.css  mainwindow.css  srepeat.css
cache/styles/Pitch-Black/: ChangeThemeWindow.css  (+1 more)
configs/: Shortcuts_Instructions  settings  subconfig.json
deploy/VFW-v0.1/: VFW.sh
deployment/: VFW.iss  build.sh  uninstall.sh
deployment/packaging/: VFW.iss
main/: ChangeThemeWindow.h  CustomObjects.h  SRepeatWindow.h  VFW.pro  main.cpp  mainwindow.cpp  mainwindow.h  mediaurl.h  playlistmanager.h  run.sh  subconfig.h  tempCodeRunnerFile.h
packaging/: VFW.reg
source/: AudioTracksManager.h  BottomControlPanel.h  ChangeThemeWindow.h  CustomObjects.h  JumpToTime.h  LoadedSubsWindow.h  MediaUrl.h  Paths.h  PlaylistManager.h  SRepeatWindow.h  ShortcutsInstructions.h  SubsConfigsWindow.h  TopBar.h  TopBarButton.h  VFW.pro  app_icon.rc  bottomControlPanel.h  build.sh  build_and_run.sh  jumptotime.h  main.cpp  mainwindow.cpp  mainwindow.h  mediaurl.h  playlistmanager.h  run.sh  shortcutsinstructions.h  subWindow.h  subconfig.h  test_run.sh  textTimer.h  topBar.h  topBarButton.h  uninstall.sh
source/mainwindow/: ActionBtnsHandler.cpp  Chapters.cpp  EventHandler.cpp  FullscreenController.cpp  InputHandler.cpp  MainWindow.cpp  PlaybackManager.cpp  ProcessManager.cpp  ResizeManager.cpp  SettingsManager.cpp  Shortcuts.cpp  SubtitleManager.cpp  SubtitleParser.cpp  UICreation.cpp  UIManager.cpp  VideoMetadata.cpp
(+63 files in other folders)
